--- a/salam.html
+++ b/salam.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <script src="store.js"></script>
-<title>welcome</title>
+<title>welcome to new year</title>
+    
 </head>
 
  <body>
