--- a/salam.html
+++ b/salam.html
@@ -24,9 +24,9 @@
         <a href="#" onmouseover="getnumber(2)">yjc</a><br>
 
          counter<input type="text" name="counter"><br><br><br>
-        <button name="sayhello" onclick="hello()">HELLO</button>
+        <button name="sayhello" onclick="window.setTimeout('hello() ',5000)">HELLO</button>
         <p id="33"></p>
-
+        <p id = 12 onmouseover="color()" >it is just for test</p>
 
         
      
